add out of distribution experiments

--- a/src/aefm/configs/experiment/xtb_ci_neb_conditioned.yaml
+++ b/src/aefm/configs/experiment/xtb_ci_neb_conditioned.yaml
@@ -1,10 +1,10 @@
 # @package _global_
 
 defaults:
-  - aefm
+  - aefm_conditioned
 
 run:
-  id: xtb_ci_neb
+  id: xtb_ci_neb_conditioned
 
 globals:
   sigma: 0.19
