--- a/src/aefm/configs/experiment/reactot_xtb_conditioned.yaml
+++ b/src/aefm/configs/experiment/reactot_xtb_conditioned.yaml
@@ -1,13 +1,13 @@
 # @package _global_
 
 defaults:
-  - aefm
+  - aefm_conditioned
 
 run:
-  id: xtb_ci_neb
+  id: reactot_xtb_conditioned
 
 globals:
-  sigma: 0.19
+  sigma: 0.12
 
 trainer:
   max_epochs: 1000
