--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ requires-python = ">=3.10"
 dependencies = [
     "schnetpack>2.0.0",
     "torch_geometric>2.6",
-    #"torch_scatter @ https://data.pyg.org/whl/torch-2.4.0%2Bcu121/torch_scatter-2.1.2%2Bpt24cu121-cp311-cp311-linux_x86_64.whl",
+    "optuna",
     "torchdiffeq>0.2",
     "py3Dmol>2.0.0",
     "wandb>=0.12.9",
